# readyset

./: .codecov.yml  .dockerignore  .gitattributes  .gitignore  .mailmap  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.deploy  Dockerfile.rust-checks  LICENSE  Makefile  README.md  README.tpl  appveyor.yml  build.sh  buildkite.yaml  clippy.toml  codecov.yml  community-development.md  dashboard.css  deny.toml  development.md  docker-compose.override.yml.example  docker-compose.yml  domain.js.tmpl  domain.tmpl  domains.js.tmpl  domains.tmpl  experimental-features.json  fresh.test  gen.py  graph.html  graph.js.tmpl  graph.tmpl  history.md  index.html  instances.html  instances.js.tmpl  (+24 more)
.cargo/: config  (+1 more)
benchmarks/: Cargo.toml  README.md  docker-compose.monitoring.override.yml  docker-compose.override.yml
benchmarks/query-slammer/: Cargo.toml
benchmarks/scripts/: open_write_latency.sh  write_latency.gnuplot
benchmarks/src/: benchmark.rs  cache_hit_benchmark.rs  eviction_benchmark.rs  fallback_benchmark.rs  graph.rs  lib.rs  main.rs  migration_benchmark.rs  query_benchmark.rs  read_benchmark.rs  read_write_benchmark.rs  scale_connections.rs  scale_views.rs  single_query_benchmark.rs  spec.rs  template.rs  workload_emulator.rs  write_benchmark.rs  write_latency_benchmark.rs
benchmarks/utils/: spec.rs
concrete-iter/: Cargo.toml
concrete-iter/src/: lib.rs
concrete-iter/tests/: tests.rs
dante/: Cargo.toml  README.md
dante/src/: compat.rs  constraint.rs  entropy.rs  generator.rs  incompat.rs  lib.rs  pattern.rs  state.rs  var.rs
dante/tests/: examples_integration.rs  integration.rs
data-generator/: Cargo.toml
data-generator/src/: distribution_annotation.rs  lib.rs
data-generator/tests/: mysql.proptest-regressions  mysql.rs
database-utils/: Cargo.toml
database-utils/src/: connection.rs  error.rs  lib.rs  tls.rs  vitess_config.rs
database-utils/tests/: vitess_config.rs
dataflow-expression/: Cargo.toml  tests.rs
dataflow-expression/benches/: json_object_agg.rs
dataflow-expression/proptest-regressions/: like.txt
dataflow-expression/src/: binary_operator.rs  eval.rs  lib.rs  like.rs  lower.rs  post_lookup.rs  reader_processing.rs  utils.rs
dataflow-expression/tests/: mysql_oracle.rs  postgres_oracle.proptest-regressions  postgres_oracle.rs
dataflow-state/: Cargo.toml
dataflow-state/benches/: persistent_state.rs  persistent_state_write.rs
dataflow-state/proptest-regressions/: key.txt
dataflow-state/src/: key.rs  keyed_state.rs  lib.rs  memory_state.rs  mk_key.rs  persistent_state.rs  single_state.rs
dataflow-state/tests/: serialized-keys.bincode  serialized-meta.json  serialized-row.bincode
ddl-stress/: Cargo.toml
ddl-stress/src/: main.rs
ensure-ebs-volume/: Cargo.toml  README.md
ensure-ebs-volume/src/: main.rs  util.rs  volume_grow.rs
evbtree/: Cargo.toml
evbtree/benchmark/: .gitignore  Cargo.toml
evbtree/src/: aliasing.rs  inner.rs  lib.rs  read.rs  values.rs  write.rs
evbtree/tests/: lib.rs  quick.rs
health-reporter/: Cargo.toml
health-reporter/src/: lib.rs
installer/: Cargo.toml  base_mysql_template.yml  base_pg_template.yml  base_template.yml  readyset-orchestrator.sh
installer/src/: compose_installer.rs  console.rs  constants.rs  deployment.rs  docker_compose.rs  main.rs  tear_down.rs  telemetry.rs  template.rs  utils.rs
installer/tests/: expect_test.rs
js-client/: Cargo.toml  README.md  package-lock.json  package.json
js-client/examples/: basic_demo.js
js-client/lib/: index.js
js-client/src/: convert.rs  lib.rs  utils.rs
js-client/tests/: integration.test.js
launchpad/: Cargo.toml
launchpad/proptest-regressions/: intervals.txt
launchpad/src/: arbitrary.rs  display.rs  futures.rs  hash.rs  intervals.rs  lib.rs  properties.rs  redacted.rs  redacted_string.rs
merging-interval-tree/: Cargo.toml
merging-interval-tree/src/: lib.rs
metrics-aggregator/: Cargo.toml
metrics-aggregator/deploy/: docker-compose.yml  prometheus.yml
metrics-aggregator/src/: build.rs  cache.rs  http_router.rs  lib.rs  main.rs  metrics_reconciler.rs
msql-srv/: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
msql-srv/examples/: psql_as_mysql.rs  serve_one.rs
msql-srv/src/: authentication.rs  commands.rs  constants.rs  error.rs  errorcodes.rs  lib.rs  packet.rs  params.rs  resultset.rs  writers.rs
msql-srv/tests/: async.rs  main.rs
mysql-srv/: Cargo.toml  README.md  clippy.toml
mysql-srv/src/: authentication.rs  commands.rs  constants.rs  error.rs  errorcodes.rs  lib.rs  packet.rs  params.rs  resultset.rs  tls.rs  writers.rs
mysql-srv/tests/: main.rs
mysql-time/: Cargo.toml
mysql-time/src/: lib.rs
nom-sql/: Cargo.toml  LICENSE  README.md
nom-sql-arbitrary/: Cargo.toml
nom-sql-arbitrary/src/: lib.rs
nom-sql/benches/: analysis.rs  parse.rs  sqlparser.rs
nom-sql/proptest-regressions/: common.txt  literal.txt
nom-sql/src/: alter.rs  analysis.rs  arithmetic.rs  case.rs  column.rs  comment.rs  common.rs  compound_select.rs  condition.rs  create.rs  create_table_options.rs  deallocate.rs  delete.rs  dialect.rs  drop.rs  explain.rs  expression.rs  index_hint.rs  insert.rs  join.rs  keywords.rs  lib.rs  literal.rs  macros.rs  order.rs  parser.rs  rename.rs  rls.rs  select.rs  set.rs  show.rs  sql_identifier.rs  sql_type.rs  sqlparser_shim.rs  table.rs  transaction.rs  truncate.rs  update.rs  use_statement.rs  whitespace.rs
nom-sql/tests/: alter-table.txt  autoincrement.txt  exists-queries.txt  finkelstein82.txt  hotcrp-queries.txt  hyrise-test-queries.txt  lib.rs
noria-client/: .gitignore  Cargo.toml  README.md
noria-client/adapter/: Cargo.toml
noria-client/examples/: basic_demo.rs  fallback.rs  ryw-init.sql  ryw-setup.sh  ryw-start-dbz.sh  ryw.rs
noria-client/metrics/: Cargo.toml
noria-mysql/: Cargo.toml  README.md  buildkite.yaml  rust-toolchain
noria-psql/: Cargo.toml  README.md
proptest-stateful/: Cargo.toml  README.md
psql-srv/: Cargo.toml  README.md  tests.rs
query-generator/: Cargo.toml
query_generator/: Cargo.toml
reader-map/: Cargo.toml  build.rs  tests.rs
(+5143 files in other folders)
