[patch.crates-io]
tokio-postgres = { git = "https://github.com/readysettech/rust-postgres.git" }

[workspace]
members = [
    "array2",
    "benchmarks",
    "catalog-tables",
    "concrete-iter",
    "data-generator",
    "database-utils",
    "dataflow-expression",
    "dataflow-state",
    "failpoint-macros",
    "failpoint-macros/proc-macros",
    "health-reporter",
    "merging-interval-tree",
    "mysql-srv",
    "mysql-time",
    "nom-sql",
    "nom-sql-arbitrary",
    "partial-map",
    "psql-srv",
    "query-generator",
    "reader-map",
    "readyset",
    "readyset-adapter",
    "readyset-adapter-types",
    "readyset-alloc",
    "readyset-alloc-metrics",
    "readyset-client",
    "readyset-client-metrics",
    "readyset-client-test-helpers",
    "readyset-clustertest",
    "readyset-common",
    "readyset-data",
    "readyset-dataflow",
    "readyset-e2e-tests",
    "readyset-errors",
    "readyset-logictest",
    "readyset-mir",
    "readyset-mysql",
    "readyset-psql",
    "readyset-repl",
    "readyset-server",
    "readyset-sql-passes",
    "readyset-telemetry-reporter",
    "readyset-tools",
    "readyset-tracing",
    "readyset-util",
    "readyset-version",
    "replication-offset",
    "replicators",
    "proptest-stateful",
    "system-benchmarks",
    "tinylb",
    "test-utils",
    "timestamp-service",
    "tournament-kway"
]
resolver = "2"

[workspace.dependencies]

########################
# FORKED DEPENDENCIES
########################

# will probably delete someday, not worth messing with
consulrs = { git = "https://github.com/readysettech/consulrs.git", branch = "allow-disabling-rustls-tls-2" }

mysql_async = { git = "https://github.com/readysettech/mysql_async" }

# only postgres-types and tokio-postgres are modified, but cargo misresolves dependencies of
# dependencies unless we force all of these to our forked repository
postgres = { git = "https://github.com/readysettech/rust-postgres.git" }
postgres-native-tls = { git = "https://github.com/readysettech/rust-postgres.git" }
postgres-protocol = { git = "https://github.com/readysettech/rust-postgres.git" }
postgres-types = { git = "https://github.com/readysettech/rust-postgres.git" }
tokio-postgres = { git = "https://github.com/readysettech/rust-postgres.git" }

########################
# STANDARD DEPENDENCIES
########################

ahash = "0.8"
anyhow = "1.0.82"
assert_approx_eq = "1.1.0"
async-bincode = "0.7.2"
async-stream = "0.3.5"
async-trait = "0.1"
atomic-counter = "1.0.1"
backoff = "0.4.0"
backtrace = "=0.3.65"
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
bimap = "0.6.3"
bincode = "1.3.3"
bit-vec = "0.6"
blake2 = "0.10"
bufstream = "0.1.4"
byteorder = "1.5.0"
bytes = "1.6.0"
chashmap = "2.2.2"
chrono = "0.4.38"
chrono-tz = "0.8.6"
cidr = "0.2.2"
clap = "4.5"
cloudflare-zlib = "0.2.10"
console = "0.15.8"
const-str = "0.5"
criterion = "0.5"
crossbeam-skiplist = "0.1.3"
csv = "1.3"
dashmap = "6.1.0"
deadpool-postgres = "0.14.0"
derive_builder = "0.20.2"
derive_more = "0.99.17"
diff = "0.1.13"
enum-display-derive = "0.1.1"
enum-kinds = "0.5.1"
enum_dispatch = "0.3.13"
envy = "0.4"
eui48 = { version = "1.1.0", default-features = false }
fail = "0.5.1"
fallible-iterator = "0.2.0"
fixedbitset = { version = "0.2.0", default-features = false }
fork = "0.2"
futures = "0.3.30"
futures-core = "0.3.30"
futures-executor = "0.3.30"
futures-sink = "0.3.30"
futures-util = "0.3.30"
fxhash = "0.2.1"
getrandom = "0.2.14"
growable-bloom-filter = "2.1.0"
hashbag = "0.1.12"
hdrhistogram = "7.5"
hex = "0.4.3"
hmac = "0.12.1"
humantime = "2.1"
hyper = "0.14.28"
include_dir = "0.7.4"
indexmap = { version = "2.5.0", default-features = false }
indicatif = "0.17"
indoc = "2.0.5"
iter-enum = "1.1.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
left-right = "0.11"
libc = "0.2"
lru = "0.12.3"
machine-uid = "0.5"
md5 = "0.7.0"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
metrics-util = "0.18.0"
mysql = "25"
mysql_common = "0.32"
native-tls = "0.2.11"
ndarray = "0.16.1"
nom = "7.1.3"
nom_locate = "4.2.0"
notify = { version = "7.0.0", default-features = false, features = ["macos_kqueue"] }
num-integer = "0.1.46"
num_cpus = "1.16.0"
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry-semantic-conventions = "0.13"
opentelemetry_sdk = "0.21.2"
parking_lot = "0.12.1"
paste = "1.0.14"
petgraph = "0.5"
pin-project = "1.1"
pprof = "0.13"
pratt = "0.3.0"
pretty_assertions = "1.4.0"
prettytable = "0.10.0"
proc-macro2 = "1"
prometheus-parse = "0.2.2"
proptest = "1.4.0"
quanta = { version = "0.12", default-features = false }
querystring = "1.1.0"
quote = "1.0.36"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4"
rand_regex = "0.15.1"
redis = "0.23.3"
regex = "1.10.4"
reqwest = "0.11.27"
rlimit = "0.10.1"
rmp-serde = "1.2.0"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4", "jemalloc"] }
rust_decimal = "1.26"
rusty-fork = "0.3.0"
rustyline = "11.0"
rustyline-derive = "0.6.0"
serde = "1.0.198"
serde_bytes = "0.11"
serde_derive = "1.0.198"
serde_json = "1.0.116"
serde_stacker = "0.1.11"
serde_with = "1.14"
serde_with_macros = "2.3.3"
serde_yaml_ng = "0.10.0"
serial_test = "0.5.1"
sha-1 = "0.10.1"
sha1 = "0.10"
sha2 = "0.10.8"
slab = "0.4.9"
slotmap = "1.0.7"
smallvec = { version = "1.13.2", default-features = false }
socket2 = "0.5"
sqlformat = "0.2.1"
sqlparser = "0.41.0"
strawpoll = "0.2.3"
streaming-iterator = "0.1"
stringprep = "0.1.4"
strum = "0.23"
strum_macros = "0.23"
syn = { version = "1.0.109", default-features = false }
temp-dir = "0.1"
tempfile = "3.10.1"
test-strategy = "0.2.1"
textwrap = "0.14"
thiserror = "1.0.59"
tikv-jemalloc-ctl = "0.5.4"
tikv-jemalloc-sys = "0.5.4"
tikv-jemallocator = "0.5.4"
time = "0.3"
timekeeper = { version = "0.3.2", default-features = false }
tokio = { version = "1.37",  features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-retry = "0.3"
tokio-scoped = "0.2.0"
tokio-stream = "0.1.15"
tokio-test = { version = "0.4.4" }
tokio-tower = "0.5.1"
tokio-util = "0.6.10"
toml = "0.5"
tower = "0.4.13"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.27"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3.18"
triomphe = "0.1"
tuple = "0.5.2"
url = "2.5.0"
uuid = "0.8"
vec1 = "1.12.0"
vec_map = "0.8.2"
vmemcached = "0.5.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
zipf = "7.0.1"
jobserver = "0.1.32"

[profile.release]
debug=true
lto="thin"

[profile.release-fat-lto]
inherits = "release"
lto="fat"

[profile.release-dist]
# configs for distro release packages (i.e. deb, rpm, etc.)
inherits = "release-fat-lto"
debug = false
strip = "debuginfo"

[profile.release-dist-quick]
# configs for distro release packages (i.e. deb, rpm, etc.), but without
# fat-lto so it will build faster.  (Only use for change list builds.)
inherits = "release"
debug = false
strip = "debuginfo"
