[patch.crates-io]
mysql_async = { git = "https://github.com/readysettech/mysql_async" }
postgres = { git = "https://github.com/readysettech/rust-postgres.git", tag = "readyset-20250218" }
postgres-protocol = { git = "https://github.com/readysettech/rust-postgres.git", tag = "readyset-20250218" }
postgres-types = { git = "https://github.com/readysettech/rust-postgres.git", tag = "readyset-20250218" }
tokio-postgres = { git = "https://github.com/readysettech/rust-postgres.git", tag = "readyset-20250218" }

[workspace]
members = [
    "array2",
    "benchmarks",
    "catalog-tables",
    "concrete-iter",
    "data-generator",
    "database-utils",
    "dataflow-expression",
    "dataflow-state",
    "failpoint-macros",
    "failpoint-macros/proc-macros",
    "health-reporter",
    "merging-interval-tree",
    "mysql-srv",
    "mysql-time",
    "nom-sql",
    "nom-sql-arbitrary",
    "partial-map",
    "proptest-stateful",
    "psql-srv",
    "query-generator",
    "reader-map",
    "readyset",
    "readyset-adapter",
    "readyset-adapter-types",
    "readyset-alloc",
    "readyset-alloc-metrics",
    "readyset-client",
    "readyset-client-metrics",
    "readyset-client-test-helpers",
    "readyset-clustertest",
    "readyset-common",
    "readyset-data",
    "readyset-dataflow",
    "readyset-decimal",
    "readyset-e2e-tests",
    "readyset-errors",
    "readyset-logictest",
    "readyset-mir",
    "readyset-mysql",
    "readyset-psql",
    "readyset-repl",
    "readyset-server",
    "readyset-shallow",
    "readyset-sql",
    "readyset-sql-parsing",
    "readyset-sql-passes",
    "readyset-telemetry-reporter",
    "readyset-tools",
    "readyset-tracing",
    "readyset-util",
    "readyset-version",
    "replication-offset",
    "replicators",
    "support",
    "system-benchmarks",
    "test-utils",
    "tinylb",
    "tournament-kway",
]
resolver = "2"

[workspace.dependencies]

########################
# FORKED DEPENDENCIES
########################

# will probably delete someday, not worth messing with
consulrs = { git = "https://github.com/readysettech/consulrs.git", branch = "allow-disabling-rustls-tls-2" }

# overridden in the patch section above
mysql_async = { version = "0.36.1", features = ["native-tls-tls"] }

# some of these are overridden in the patch section above
postgres = "0.19.9"
postgres-native-tls = "0.5.0"
postgres-protocol = "0.6.7"
postgres-types = "0.2.8"
tokio-postgres = "0.7.12"

########################
# STANDARD DEPENDENCIES
########################

ahash = "0.8"
antithesis_sdk = { git = "https://github.com/antithesishq/antithesis-sdk-rust", branch = "spot-artificer", default-features = false }
anyhow = "1.0.82"
async-channel = "2.4.0"
atoi = "2.0.0"
assert_approx_eq = "1.1.0"
async-bincode = "0.7.2"
async-stream = "0.3.5"
async-trait = "0.1"
backtrace = "0.3.65"
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
bigdecimal = "0.4.8"
bimap = "0.6.3"
bincode = "1.3.3"
bit-vec = "0.6"
bitflags = "2.9.1"
blake2 = "0.10"
bufstream = "0.1.4"
byteorder = "1.5.0"
bytes = "1.6.0"
cached = "0.56.0"
chrono = "0.4.38"
chrono-tz = "0.10.4"
cidr = "0.2.2"
clap = "4.5"
cloudflare-zlib = "0.2.10"
console = "0.16.0"
const-str = "0.6"
criterion = "0.5"
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"
deadpool = "0.12.2"
deadpool-postgres = "0.14.0"
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = [
    "from",
    "into",
    "try_into",
    "deref",
    "display",
] }
diff = "0.1.13"
dir-size = "0.1"
enum-display-derive = "0.1.1"
enum-kinds = "0.5.1"
enum_dispatch = "0.3.13"
envy = "0.4"
eui48 = { version = "1.1.0", default-features = false }
exponential-backoff = "2.0.0"
fail = "0.5.1"
fallible-iterator = "0.2.0"
fixedbitset = { version = "0.4.2", default-features = false }
fork = "0.2"
futures = "0.3.30"
futures-util = "0.3.30"
rustc-hash = { version = "2.1"}
getrandom = "0.2.14"
growable-bloom-filter = "2.1.0"
hashbag = "0.1.12"
hdrhistogram = "7.5"
hex = "0.4.3"
hmac = "0.12.1"
html-escape = "0.2.13"
hyper = "0.14.28"
icu = { git = "https://github.com/unicode-org/icu4x.git" }
include_dir = "0.7.4"
indexmap = { version = "2.5.0", default-features = false }
indicatif = "0.18"
indoc = "2.0.5"
iter-enum = "1.1.3"
itertools = "0.14.0"
itoa = "1.0"
lazy_static = "1.4.0"
left-right = "0.11"
libc = "0.2"
log-once = "0.4.1"
lru = "0.14.0"
machine-uid = "0.5"
moka = { version = "0.12", features = ["sync"] }
md5 = "0.8.0"
metrics = "0.24.0"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
metrics-util = "0.20.0"
mysql_common = "0.35"
native-tls = "0.2.11"
ndarray = "0.16.1"
nom = "7.1.3"
nom_locate = "4.2.0"
notify = { version = "8.0.0", default-features = false, features = [
    "macos_kqueue",
] }
num-integer = "0.1.46"
num-traits = "0.2.19"
num_cpus = "1.16.0"
once_cell = "1.20.2"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = "0.30.0"
parking_lot = "0.12.1"
papaya = "0.1.3"
paste = "1.0.14"
pem = "3.0.5"
petgraph = "0.6"
pin-project = "1.1"
pprof = "0.15"
pratt = "0.4.0"
pretty_assertions = "1.4.0"
prettytable = "0.10.0"
proc-macro2 = "1"
proptest = { version = "1.7.0", features = ["handle-panics"] }
pyroscope = { version = "0.5", default-features = false }
pyroscope_pprofrs = { version = "0.2", default-features = false }
quanta = { version = "0.12", default-features = false }
querystring = "1.1.0"
quote = "1.0.36"
rand = { version = "0.9.1", features = ["small_rng"] }
rand_distr = "0.5"
rand_regex = "0.18.1"
regex = "1.10.4"
reqwest = "0.11.27"
rlimit = "0.10.1"
rmp-serde = "1.2.0"
rocksdb = { version = "0.22.0", default-features = false, features = [
    "lz4",
    "jemalloc",
] }
rusty-fork = "0.3.0"
rustyline = "17.0"
rustyline-derive = "0.11.1"
serde = "1.0.198"
serde_bytes = "0.11"
serde_json = "1.0.116"
serde_stacker = "0.1.11"
serde_with = "3.11"
serde_with_macros = "3.11.0"
serde_yaml_ng = "0.10.0"
serial_test = "3.1.1"
sha-1 = "0.10.1"
sha1 = "0.10"
sha2 = "0.10.8"
slab = "0.4.9"
slotmap = "1.0.7"
smallvec = { version = "1.13.2", default-features = false }
socket2 = "0.6"
sqlformat = "0.3.1"
sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs", branch = "main" }
strawpoll = "0.2.3"
streaming-iterator = "0.1"
stringprep = "0.1.4"
strum = { version = "0.27", features = ["derive"] }
syn = { version = "2.0.87", default-features = false }
sysinfo = "0.37"
temp-dir = "0.1"
tempfile = "3.10.1"
test-strategy = "0.4.3"
textwrap = "0.16"
thiserror = "2.0.16"
tikv-jemalloc-ctl = "0.5.4"
tikv-jemalloc-sys = "0.5.4"
tikv-jemallocator = "0.5.4"
time = "0.3"
timekeeper = { version = "0.3.2", default-features = false }
tokio = { version = "1.44", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-retry = "0.3"
tokio-scoped = "0.2.0"
tokio-stream = "0.1.15"
tokio-test = { version = "0.4.4" }
tokio-tower = "0.5.1"
tokio-util = "0.7.12"
toml = "0.8"
tower = "0.4.13"
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.27"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.18"
triomphe = "0.1"
tuple = "0.5.2"
url = "2.5.0"
uuid = "0.8"
vec1 = "1.12.0"
vec_map = "0.8.2"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
jobserver = "0.1.32"
yore = "1.1.0"

[profile.release]
debug = true
lto = "thin"

[profile.release-fat-lto]
inherits = "release"
lto = "fat"

[profile.release-dist]
# configs for distro release packages (i.e. deb, rpm, etc.)
inherits = "release-fat-lto"
debug = false
strip = "debuginfo"

[profile.release-dist-quick]
# configs for distro release packages (i.e. deb, rpm, etc.), but without
# fat-lto so it will build faster.  (Only use for change list builds.)
inherits = "release"
debug = false
strip = "debuginfo"

[profile.antithesis]
inherits = "release"
lto = "off"

[workspace.lints.rust]
unused_unsafe = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
missing_safety_doc = "deny"
multiple_unsafe_ops_per_block = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
