[package]
name = "benchmarks"
version = "0.1.0"
publish = false
authors = ["Readyset Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
enum_dispatch = { workspace = true }
futures = { workspace = true }
hdrhistogram = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
reqwest = { workspace = true, features = ["stream", "native-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

# local dependencies
data-generator = { path = "../data-generator" }
database-utils = { path = "../database-utils" }
nom-sql = { path = "../nom-sql" }
query-generator = { path = "../query-generator" }
readyset-client = { path = "../readyset-client" }
readyset-data = { path = "../readyset-data" }
readyset-server = { path = "../readyset-server" }
readyset-sql = { path = "../readyset-sql" }
readyset-sql-parsing = { path = "../readyset-sql-parsing" }
readyset-tracing = { path = "../readyset-tracing" }
readyset-util = { path = "../readyset-util" }

[lib]
path = "src/lib.rs"

[features]

[dev-dependencies]
itertools = { workspace = true }
proptest = { workspace = true }
test-strategy = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
