[package]
name = "data-generator"
publish = false
version = "0.1.0"
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.38"
bit-vec = { version = "0.6", features = ["serde"] }
chrono = "0.4.19"
eui48 = { workspace = true }
growable-bloom-filter = "2.0.1"
rand = "0.8.3"
rand_regex = "0.15.1"
rust_decimal = "1.26"
uuid = "0.8"
zipf = "7.0.0"

nom-sql = { path = "../nom-sql" }
readyset-data = { path = "../readyset-data/" }

[dev-dependencies]
test-strategy = "0.2.0"
proptest = "1.0.0"
mysql_async = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serial_test = "0.5"
test-utils = { path = "../test-utils" }
