[package]
name = "data-generator"
publish = false
version = "0.1.0"
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bit-vec = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
eui48 = { workspace = true }
growable-bloom-filter = { workspace = true }
rand = { workspace = true }
rand_regex = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
zipf = { workspace = true }

nom-sql = { path = "../nom-sql" }
readyset-data = { path = "../readyset-data/" }

[dev-dependencies]
test-strategy = { workspace = true }
proptest = { workspace = true }
mysql_async = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serial_test = { workspace = true }
test-utils = { path = "../test-utils" }
