[package]
name = "database-utils"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
mysql_async = { workspace = true }
native-tls = "0.2.8"
thiserror = "1.0.30"
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"] }
postgres-native-tls = { workspace = true }
clap = { workspace = true, features = ["derive","env"] }
serde = { version = "1.0", features = ["derive"] }
readyset-util = { path = "../readyset-util" }
readyset-errors = { path = "../readyset-errors" }
async-trait = "0.1"
nom-sql = { path = "../nom-sql" }
readyset-client = { path = "../readyset-client" }
deadpool-postgres = "0.10.3"
vitess-grpc = "0.2"
tonic = "0.9"
url = "2.4"
