[package]
name = "database-utils"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
derive_more = { workspace = true }
futures = { workspace = true }
mysql_async = { workspace = true }
native-tls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"] }
postgres-native-tls = { workspace = true }
clap = { workspace = true, features = ["derive","env"] }
serde = { workspace = true, features = ["derive"] }
readyset-util = { path = "../readyset-util" }
readyset-errors = { path = "../readyset-errors" }
nom-sql = { path = "../nom-sql" }
deadpool-postgres = { workspace = true }
num_cpus = { workspace = true }
