[package]
name = "dataflow-expression"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
vec1 = { workspace = true }
proptest = { workspace = true }
test-strategy = { workspace = true }

# Local deps
readyset-sql = { path = "../readyset-sql" }
readyset-util = { path = "../readyset-util" }
mysql-time = { path = "../mysql-time" }
readyset-data = { path = "../readyset-data" }
readyset-errors = { path = "../readyset-errors" }
partial-map = { path = "../partial-map" }

[dev-dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
mysql_async = { workspace = true }
nom-sql = { path = "../nom-sql" }
postgres = { workspace = true, features = [
    "with-chrono-0_4",
    "with-eui48-1",
    "with-uuid-0_8",
    "with-serde_json-1",
    "with-bit-vec-0_6",
] }
regex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true, features = [
    "with-chrono-0_4",
    "with-eui48-1",
    "with-uuid-0_8",
    "with-serde_json-1",
    "with-bit-vec-0_6",
] }
