[package]
name = "dataflow-expression"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
bitflags = { workspace = true }
cached = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }
proptest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
test-strategy = { workspace = true }
tracing = { workspace = true }
vec1 = { workspace = true }

# Local deps
readyset-sql = { path = "../readyset-sql" }
readyset-util = { path = "../readyset-util" }
mysql-time = { path = "../mysql-time" }
readyset-data = { path = "../readyset-data" }
readyset-decimal = { path = "../readyset-decimal" }
readyset-errors = { path = "../readyset-errors" }
partial-map = { path = "../partial-map" }

[dev-dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
mysql_async = { workspace = true }
nom-sql = { path = "../nom-sql" }
postgres = { workspace = true, features = [
    "with-chrono-0_4",
    "with-eui48-1",
    "with-uuid-0_8",
    "with-serde_json-1",
    "with-bit-vec-0_6",
] }
pretty_assertions = { workspace = true }
readyset-sql-parsing = { path = "../readyset-sql-parsing" }
regex = { workspace = true }
test-utils = { path = "../test-utils" }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true, features = [
    "with-chrono-0_4",
    "with-eui48-1",
    "with-uuid-0_8",
    "with-serde_json-1",
    "with-bit-vec-0_6",
] }

[lints]
workspace = true
