[package]
name = "dataflow-state"
version = "0.0.1"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
ahash = "0.7"
anyhow = "1.0"
bincode = "1.0.0"
clap = { workspace = true, features = ["derive","env"] }
derive_more = "0.99.11"
hashbag = "0.1.2"
indexmap = "1.1.0"
itertools = "0.10"
notify = "4.0"
proptest = "1.0.0"
rand = "0.7"
rocksdb.workspace = true
serde = { version = "1.0.8", features = ["rc"] }
serde_json = "1.0.2"
tempfile = "3.4"
test-strategy = "0.2.0"
thiserror = "1.0.26"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tuple = "0.5.1"
vec1 = "1.6.0"
parking_lot = "0.12"

# local deps
common = { path = "../readyset-common", package = "readyset-common" }
readyset-alloc = { path = "../readyset-alloc" }
readyset-util = { path = "../readyset-util" }
readyset-client = { path = "../readyset-client" }
readyset-data = { path = "../readyset-data" }
readyset-errors = { path = "../readyset-errors" }
partial-map = { path = "../partial-map" }

[dev-dependencies]
pretty_assertions = "0.7.2"
lazy_static = "1.0.0"
criterion = { version = "0.3", features=['real_blackbox', 'async_tokio'] }
rust_decimal = { version = "1.26", features = ["db-tokio-postgres", "serde-str"] }

[[bench]]
name = "persistent_state"
harness = false

# This works around an issue that prevents us from passing arguments to the binary when running
# `cargo bench` when those arguments are supported by criterion but not libtest. See this link for
# more info:
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
